Added same functional

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -13,6 +13,8 @@
 .header ul li:hover {
     background-color: #444;
     cursor: pointer;
+    color: #00bc8c;
+    transition: .2s;
 }
 
 .header a:hover {
@@ -21,8 +23,13 @@
 
 .header h3 a {
     color: white;
+    transition: .2s;
 }
 
 .header h3 a:hover {
     color: #00bc8c;
+}
+
+.header ul a {
+    height: 38px;
 }
