--- a/src/components/person-details/person-details.css
+++ b/src/components/person-details/person-details.css
@@ -1,25 +1,24 @@
 .person-details {
-    display: flex;
-    flex-direction: row;
-    padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+  border: 1px solid #444;
 }
 
 .person-details .person-image {
-    width: 30%;
-    height: 30%;
-    border-radius: 10px;
+  width: 30%;
+  height: 30%;
+  border-radius: 10px;
 }
 
 .person-details .list-group-item {
-    padding: .25rem;
+  padding: .25rem;
 }
 
 .person-details .list-group-item .term{
-    margin-right: .5rem;
+  margin-right: .5rem;
 }
 
-@media (max-width: 768px) {
-    .person-details {
-        margin-top: 1rem;
-    }
+.person-details button {
+  margin-top: 5px;
 }
